syntax = "proto3";
package borrow;

service Borrow {
    rpc BorrowBook(BorrowBookReq) returns (BorrowBookRsp) {}
    rpc ReturnBook(ReturnBookReq) returns (ReturnBookRsp) {}
    rpc DeleteRecord(DeleteRecordReq) returns (DeleteRecordRsp) {}
}

message Book {
    int64 id = 1;
    string name = 2;
    string author = 3;
    string publish = 4;
    string introduction = 5;
    int64 number = 6;
    string ISBN = 7;
}

message BorrowBookReq {
    int64 user_id = 1;
    int64 book_id = 2;
}

message BorrowBookRsp {
    int64 code = 1;
    string msg = 2;
}

message ReturnBookReq {
    int64 user_id = 1;
    int64 book_id = 2;
    string borrow_date = 3;
}

message ReturnBookRsp {
    int64 code = 1;
    string msg = 2;
}

message DeleteRecordReq {
    int64 id = 1;
}
message DeleteRecordRsp{
    int64 code = 1;
    string msg = 2;
}